--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ license = "MIT OR Apache-2.0"
 reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
 tungstenite = { version = "0.17", features = ["native-tls"] }
 serde = { version = "1.0", features = ["derive"] }
+base64 = "0.13"
