--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
 tungstenite = { version = "0.17", features = ["native-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 base64 = "0.13"
+native-tls = "0.2"
+
+[dev-dependencies]
+env_logger = "0.9"
