--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tungstenite = { version = "0.17", features = ["native-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 base64 = "0.13"
 native-tls = "0.2"
+http = "0.2"
 
 [dev-dependencies]
 env_logger = "0.9"
